feat : 누락 내용 추가